<resources>
    <string name="app_name">B-upS</string>
    <string name="ip">http://192.168.0.102:1234/</string>
    <string name="ip_webServices">http://scoutbups.com/webServices/</string>
    <string name="ip_web">http://scoutbups.com/bupsWeb/Html/Base.html</string>
    <string name="API_KEY" templateMergeStrategy="preserve" translatable="false">AIzaSyCEEP77NR9rp45HaC6TA22H_mR8rFCfUCQ</string>
    <string name="Dash">Dashboard</string>
    <string name="Contacts">Contacts</string>
    <string name="CP">Control Panel</string>
    <string name="QR">QR Image</string>
    <string name="Localization">Localization</string>
    <string name="Maps">Maps</string>
    <string name="Tool">Toolbox</string>
    <string name="Geo">Geolocation</string>
    <string name="Emergency">Emergency Numbers</string>
    <string name="Communication">Comunication</string>
    <string name="Username">CUM</string>
    <string name="Password">Contraseñas</string>
    <string name="eeas_app_name">B-upS</string>
    <string name="eeas_hint_username">Username</string>
    <string name="eeas_hint_password">Password</string>
    <string name="eeas_button_Login">Login</string>
    <string name="eeas_button_register">Register</string>
    <string name="eeas_error_password">Password must contain at least 8 characters.</string>
    <string name="eeas_error_internet">Please check your internet connection</string>
    <string name="eeas_error_user">The username didn´t exist or password is incorrect</string>
    <string name="eeas_filter_title">Filter</string>
    <string name="eeas_search_title">Search</string>
    <string name="eeas_product_title">Title</string>
    <string name="eeas_product_description">Secondary text</string>
    <string name="User1">DBA</string>
    <string name="User2">Organizador</string>
    <string name="User3">Servicio Medico</string>
    <string name="User4">Tallerista</string>
    <string name="User5">Juez</string>
    <string name="User6">Participante</string>
    <string name="User7">Scouter Responsable</string>
    <string name="User8">Staff</string>
    <string name="Bienvenida">Bienvenido </string>
    <string name="shr_error_password">Password must contain at least 8 characters.</string>
    <string name="shr_filter_title">Filter</string>
    <string name="shr_search_title">Search</string>
    <string name="shr_product_title">Title</string>
    <string name="shr_product_description">Secondary text</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dmain">Menu</string>
    <string name="navigation_drawer_open">Open Menu</string>
    <string name="navigation_drawer_close">Close Menu</string>
    <string name="nav_header_title">User</string>
    <string name="nav_header_subtitle">User Type</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Reglamentos">Reglamentos</string>
</resources>