<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/itPartDash"
        android:title="@string/Dash"
        />
    <item
        android:id="@+id/itPartContacts"
        android:title="@string/Contacts"
        />
    <item
        android:id="@+id/itPartControl"
        android:title="@string/CP"
        />
    <item
        android:id="@+id/itPartQR"
        android:title="@string/QR"
        />
    <item
        android:id="@+id/itPartLocalization"
        android:title="@string/Localization"
        />
    <item
        android:id="@+id/itPartMaps"
        android:title="@string/Maps"
        />
    <item
        android:id="@+id/itPartTool"
        android:title="@string/Tool"
        />
    <item
        android:id="@+id/itPartGeo"
        android:title="@string/Geo"
        />
    <item
        android:id="@+id/itPartEmergency"
        android:title="@string/Emergency"
        />
    <item
        android:id="@+id/itPartComunication"
        android:title="@string/Communication"
        />
</menu>