<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/itStaffDash"
        android:title="@string/Dash"
        />
    <item
        android:id="@+id/itStaffContacts"
        android:title="@string/Contacts"
        />
    <item
        android:id="@+id/itStaffControl"
        android:title="@string/CP"
        />
    <item
        android:id="@+id/itStaffQR"
        android:title="@string/QR"
        />
    <item
        android:id="@+id/itStaffLocalization"
        android:title="@string/Localization"
        />
    <item
        android:id="@+id/itStaffMaps"
        android:title="@string/Maps"
        />
    <item
        android:id="@+id/itStaffTool"
        android:title="@string/Tool"
        />
    <item
        android:id="@+id/itStaffGeo"
        android:title="@string/Geo"
        />
    <item
        android:id="@+id/itStaffEmergency"
        android:title="@string/Emergency"
        />
    <item
        android:id="@+id/itStaffComunication"
        android:title="@string/Communication"
        />
</menu>