<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/itSMDash"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Dash"
            />
        <item
            android:id="@+id/itSMContacts"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Contacts"
            />
        <item
            android:id="@+id/itSMControl"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/CP"
            />
        <item
            android:id="@+id/itSMQR"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/QR"
            />
        <item
            android:id="@+id/itSMLocalization"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Localization"
            />
        <item
            android:id="@+id/itSMMaps"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Maps"
            />
        <item
            android:id="@+id/itSMTool"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Tool"
            />
        <item
            android:id="@+id/itSMGeo"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Geo"
            />
        <item
            android:id="@+id/itSMEmergency"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Emergency"
            />
        <item
            android:id="@+id/itSMComunication"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Communication"
            />
    </group>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="SM" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
</menu>