<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/itOrgDash"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Dash"
            />
        <item
            android:id="@+id/itOrgContacts"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Contacts"
            />
        <item
            android:id="@+id/itOrgControl"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/CP"
            />
        <item
            android:id="@+id/itOrgQR"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/QR"
            />
        <item
            android:id="@+id/itOrgLocalization"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Localization"
            />
        <item
            android:id="@+id/itOrgMaps"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Maps"
            />
        <item
            android:id="@+id/itOrgTool"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Tool"
            />
        <item
            android:id="@+id/itOrgGeo"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Geo"
            />
        <item
            android:id="@+id/itOrgEmergency"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Emergency"
            />
        <item
            android:id="@+id/itOrgComunication"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Communication"
            />
    </group>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Org" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
</menu>