<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/itDbaDash"
            android:icon="@drawable/ic_escritorioremoto"
            android:title="@string/Dash"
            />
        <item
            android:id="@+id/itDbaQR"
            android:icon="@drawable/ic_qr"
            android:title="@string/QR"
            />
    </group>
    <item android:title="Trabajo">
        <menu>
            <item
                android:id="@+id/itDbaControl"
                android:icon="@drawable/ic_gestionasistentes"
                android:title="@string/CP"
                />
            <item
                android:id="@+id/itDbaTool"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/Tool"
                />
            <item
                android:id="@+id/itDbaLocalization"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/Localization"
                />
        </menu>
    </item>
    <item android:title="Usuario">
        <menu>
            <item
                android:id="@+id/itDbaMaps"
                android:icon="@drawable/ic_mapicon"
                android:title="@string/Maps"
                />
            <item
                android:id="@+id/itDbaContacts"
                android:icon="@drawable/ic_contacto"
                android:title="@string/Contacts"
                />
            <item
                android:id="@+id/itDbaGeo"
                android:icon="@drawable/ic_location"
                android:title="@string/Geo"
                />
            <item
                android:id="@+id/itDbaComunication"
                android:icon="@drawable/ic_comunicado"
                android:title="@string/Communication"
                />
        </menu>
    </item>
    <item android:title="Options">
        <menu>
            <item
                android:id="@+id/itDbaEmergency"
                android:icon="@drawable/ic_emergencia"
                android:title="@string/Emergency"
                />
            <item
                android:id="@+id/itDbaOptions"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="DBA" />
            <item
                android:id="@+id/itDbaExit"
                android:icon="@drawable/ic_login"
                android:title="Cerrar Sesion" />
        </menu>
    </item>
</menu>
