<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/itSRDash"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Dash"
            />
        <item
            android:id="@+id/itSRQR"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/QR"
            />
    </group>
    <item android:title="Trabajo">
        <menu>
            <item
                android:id="@+id/itSRMedicalFiles"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Medical Files"
                />
            <item
                android:id="@+id/itSRSched"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Horario"
                />
        </menu>
    </item>
    <item android:title="Usuario">
        <menu>
            <item
                android:id="@+id/itSRMaps"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/Maps"
                />
            <item
                android:id="@+id/itSRContacts"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/Contacts"
                />
            <item
                android:id="@+id/itSRComunication"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/Communication"
                />
            <item
                android:id="@+id/itSRGeo"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/Geo"
                />
        </menu>
    </item>
    <item android:title="Options">
        <menu>
            <item
                android:id="@+id/itSREmergency"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/Emergency"
                />
            <item
                android:id="@+id/itSROptions"
                android:icon="@drawable/ic_menu_share"
                android:title="SR" />
            <item
                android:id="@+id/itSRExit"
                android:icon="@drawable/ic_menu_send"
                android:title="Cerrar Sesion" />
        </menu>
    </item>
</menu>