<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/logotipoplataformadigital"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/txtLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:text="@string/eeas_app_name"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eeas_hint_username">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/userEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eeas_hint_password"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/eeas_button_Login"
                android:textSize="25sp"
                android:padding="10dp"
                android:textAppearance="@style/Widget.MaterialComponents.Button" />

            <android.support.design.button.MaterialButton
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_toLeftOf="@id/loginButton"
                android:layout_toStartOf="@id/loginButton"
                android:text="@string/eeas_button_register"
                android:textSize="30sp"
                android:padding="5dp"
                android:onClick="register"
                android:textAppearance="@style/Widget.MaterialComponents.Button" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>
